--- a/test/hello.html
+++ b/test/hello.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
-        <h1>HELLOOOOOO</h1>
-    </div>
+    <h1>Hello, Woooooorld!!!</h1>
 </body>
 </html>
